--- a/test.ipynb
+++ b/test.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Intro: modelo de Yard-Sale"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -11,11 +19,81 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lo primero que necesitamos es una clase que guarde el modelo base."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class model:\n",
+    "    def __init__(self, n_agentes):\n",
+    "        # Initialize n agents with random (0, 1] wealth and normalize\n",
+    "        self.N = n_agentes\n",
+    "        self.w = np.random.rand(self.N)\n",
+    "        self.w = (self.w)/(np.sum(self.w))\n",
+    "\n",
+    "    def gini(self):\n",
+    "        # Compute gini index\n",
+    "        self.gini_idx = 1\n",
+    "        \n",
+    "        return self.gini_idx\n",
+    "    \n",
+    "    def update_wealth(self, winner, loser, dw):\n",
+    "        self.w[winner] += dw\n",
+    "        self.w[loser] -= dw\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora definimos el modelo de Yard-Sale, que hereda del modelo base."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class YSmodel(model):\n",
+    "    def __init__(self, n_agentes, f):\n",
+    "        super().__init__(n_agentes)\n",
+    "        # f is the social protection factor\n",
+    "        self.f = f\n",
+    "\n",
+    "    def MCS(self, steps):\n",
+    "        \"\"\"\n",
+    "        Main MC loop\n",
+    "        \"\"\"\n",
+    "\n",
+    "        for i in range(steps):\n",
+    "            # For every i:\n",
+    "                # Choose random j!=i\n",
+    "                # Compute p(i=winner)\n",
+    "                # Choose random number -> winner\n",
+    "                # update_wealth"
+   ]
   }
  ],
  "metadata": {
