Added gpt suggestions

--- a/gini_benchmark.ipynb
+++ b/gini_benchmark.ipynb
@@ -19,16 +19,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.4317245371249327, 0.4317245371249327, 0.4317245371249327)"
+       "(0.12160339648105611,\n",
+       " 0.12160339648105611,\n",
+       " 0.12160339648105611,\n",
+       " 0.12160339648105589)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,17 +56,24 @@
     "        total += np.sum(np.abs(w - w[i]))\n",
     "    return total / (2*len(w))\n",
     "\n",
+    "def fun_gpt(w):\n",
+    "    N = len(w)\n",
+    "    w = np.sort(w)\n",
+    "    p_cumsum = np.cumsum(w) / np.sum(w)\n",
+    "    B = np.sum(p_cumsum) / N\n",
+    "    return 1 + 1 / N - 2 * B\n",
+    "\n",
     "    \n",
     "n=3\n",
     "w = np.random.rand(n)\n",
     "w /= np.sum(w)\n",
     "\n",
-    "fun1(w), fun2(w), fun3(w)"
+    "fun1(w), fun2(w), fun3(w), fun_gpt(w)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -74,37 +84,42 @@
       "--------\n",
       "n =  100 \n",
       "--------\n",
-      "28.7 µs ± 584 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
-      "748 µs ± 17 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
-      "712 µs ± 25.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "27.6 µs ± 597 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "725 µs ± 30.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "683 µs ± 24.8 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "18.9 µs ± 167 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
       "\n",
       "--------\n",
       "n =  1000 \n",
       "--------\n",
-      "7.24 ms ± 248 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "10.1 ms ± 697 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "10.5 ms ± 1.96 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "7.49 ms ± 465 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "11.5 ms ± 1.54 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "10 ms ± 1.17 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "56.9 µs ± 1.43 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
       "\n",
       "--------\n",
       "n =  5000 \n",
       "--------\n",
-      "140 ms ± 8.67 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "55.4 ms ± 2.14 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "67.7 ms ± 2.35 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "281 ms ± 69.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "57.4 ms ± 2.75 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "65.3 ms ± 684 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "331 µs ± 9.48 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
       "\n",
       "--------\n",
       "n =  10000 \n",
       "--------\n",
-      "969 ms ± 32.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "148 ms ± 14.2 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "219 ms ± 31.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "628 ms ± 175 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "142 ms ± 13.5 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "179 ms ± 2.83 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "657 µs ± 5.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
       "\n",
       "--------\n",
       "n =  15000 \n",
       "--------\n",
-      "3.96 s ± 641 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "302 ms ± 39.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "407 ms ± 32.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.24 s ± 369 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "226 ms ± 3.14 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "342 ms ± 6.56 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "1.02 ms ± 13.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -118,7 +133,8 @@
     "    print('\\n--------\\nn = ', n, '\\n--------')\n",
     "    %timeit fun1(w),\n",
     "    %timeit fun2(w),\n",
-    "    %timeit fun3(w)"
+    "    %timeit fun3(w),\n",
+    "    %timeit fun_gpt(w),"
    ]
   }
  ],
