Added n_active agents

--- a/test.ipynb
+++ b/test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "class model:\n",
-    "    def __init__(self, n_agentes, w_min=1e-15, every=1):\n",
+    "    def __init__(self, n_agents, w_min=3*1e-15, every=1):\n",
     "        # Basic params of model\n",
-    "        self.N = n_agentes\n",
+    "        self.N = n_agents\n",
     "        self.w_min = w_min\n",
     "        self.every = every\n",
     "        # Initialize n agents with random risks and wealth between (0, 1] \n",
@@ -48,6 +48,8 @@
     "        self.gini = []\n",
     "        # Compute initial Gini\n",
     "        self.gini.append(self.get_gini())\n",
+    "        # Compute initial active agents\n",
+    "        self.n_active = [self.get_actives()]\n",
     "\n",
     "    def get_opponents(self):\n",
     "        \"\"\"Snippet that assigns each agent with another random agent for a \n",
@@ -80,6 +82,12 @@
     "        p_cumsum = np.cumsum(w) / np.sum(w)\n",
     "        B = np.sum(p_cumsum) / self.N\n",
     "        return 1 + 1/self.N - 2*B\n",
+    "    \n",
+    "    def get_actives(self):\n",
+    "        return np.sum(self.n[:,0]>self.w_min)\n",
+    "    \n",
+    "    def get_liquidity():\n",
+    "        return\n",
     "\n",
     "    def update_wealth(self, i, j, dw):\n",
     "        self.n[i, 0] += dw\n",
@@ -114,6 +122,7 @@
     "            # After self.every MCS append new Gini index\n",
     "            if ((mcs + 1) % self.every == 0):\n",
     "                self.gini.append(self.get_gini())\n",
+    "                self.n_active.append(self.get_actives())\n",
     "\n"
    ]
   },
@@ -127,13 +136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "class YSmodel(model):\n",
-    "    def __init__(self, n_agentes, w_min=1e-15, f=0, every=1):\n",
-    "        super().__init__(n_agentes, w_min, every)\n",
+    "    def __init__(self, n_agents, w_min=3*1e-15, f=0, every=1):\n",
+    "        super().__init__(n_agents, w_min, every)\n",
     "        # f is the social protection factor\n",
     "        self.f = f\n",
     "\n",
@@ -147,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +165,7 @@
        "0.1"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,20 +218,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No. of active agents: 383\n",
-      "Wealth of richest agent: 0.037\n"
+      "No. of active agents: 1000\n",
+      "Wealth of richest agent: 0.002\n"
      ]
     }
    ],
    "source": [
-    "n_act = np.sum(model.n[:,0]>model.w_min)\n",
+    "n_act = model.get_actives()\n",
     "w_richest = np.max(model.n[:,0])\n",
     "\n",
     "print(\"No. of active agents: {}\\nWealth of richest agent: {:.3f}\".format(n_act, w_richest))"
@@ -239,24 +248,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "filepath = os.path.join(os.getcwd(), \"data/1_basic_results\")\n",
     "\n",
     "f_set = [0, .05, .1, .2, .3, .4, .5]\n",
-    "\n",
+    "MCS = int(1e+4)\n",
     "\n",
     "for f in f_set:\n",
-    "    model = YSmodel(1000, w_min=1e-14, f=f, every=10)\n",
-    "    model.MCS(100000)\n",
+    "    model = YSmodel(1000, w_min=3*1e-17, f=f, every=1)\n",
+    "    model.MCS(MCS)\n",
     "    \n",
     "    path_gini = os.path.join(filepath, 'f={:.2f}_gini'.format(f))\n",
     "    np.save(path_gini, np.array(model.gini))\n",
     "    \n",
     "    path_agents = os.path.join(filepath, 'f={:.2f}_agents'.format(f))\n",
-    "    np.save(path_agents, model.n[:, 0])\n"
+    "    np.save(path_agents, model.n[:, 0])\n",
+    "\n",
+    "    path_active = os.path.join(filepath, 'f={:.2f}_active'.format(f))\n",
+    "    np.save(path_active, np.array(model.n_active))\n"
    ]
   },
   {
