Added active agents graph

--- a/test.ipynb
+++ b/test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,9 +69,11 @@
     "    def is_valid(self, i, j):\n",
     "        # Check if both agents have w > w_min\n",
     "        valid = (self.n[i, 0] > self.w_min) and (self.n[j, 0] > self.w_min)\n",
-    "        # Set agents with less than w_min to zero\n",
-    "        self.n[i, 0] = np.where(self.n[i, 0] < self.w_min, 0, self.n[i, 0])\n",
-    "        self.n[j, 0] = np.where(self.n[j, 0] < self.w_min, 0, self.n[j, 0])\n",
+    "        # Setting w_i < w_min to w_i = 0 only introduces error in W_tot ~ 1\n",
+    "        # Maybe there is no need to do this\n",
+    "            # # Set agents with less than w_min to zero\n",
+    "            # self.n[i, 0] = np.where(self.n[i, 0] < self.w_min, 0, self.n[i, 0])\n",
+    "            # self.n[j, 0] = np.where(self.n[j, 0] < self.w_min, 0, self.n[j, 0])\n",
     "        return valid\n",
     "\n",
     "    def get_dw(self, i, j):\n",
@@ -108,8 +110,6 @@
     "            for i in range(self.N):\n",
     "                # Check both agents have w > w_min\n",
     "                if self.is_valid(i, j[i]):\n",
-    "                    #print(i, j[i])\n",
-    "                    #continue\n",
     "                    # Compute dw\n",
     "                    dw = self.get_dw(i, j[i])\n",
     "                    # Play the YS game\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,20 +242,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahora voy a recolectar dato para distintos f y así reproducir resultados de\n",
+    "Ahora voy a recolectar datos para distintos f y así reproducir resultados de\n",
     "juli/santi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "filepath = os.path.join(os.getcwd(), \"data/1_basic_results\")\n",
     "\n",
     "f_set = [0, .05, .1, .2, .3, .4, .5]\n",
-    "MCS = int(1e+4)\n",
+    "MCS = int(1e+5)\n",
     "\n",
     "for f in f_set:\n",
     "    model = YSmodel(1000, w_min=3*1e-17, f=f, every=1)\n",
