--- a/test.ipynb
+++ b/test.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "class model:\n",
-    "    def __init__(self, n_agents, w_min=3*1e-15, every=1):\n",
+    "    def __init__(self, n_agents, w_min=1e-17, every=1):\n",
     "        # Basic params of model\n",
     "        self.N = n_agents\n",
     "        self.w_min = w_min\n",
@@ -141,7 +141,7 @@
    "outputs": [],
    "source": [
     "class YSmodel(model):\n",
-    "    def __init__(self, n_agents, w_min=3*1e-15, f=0, every=1):\n",
+    "    def __init__(self, n_agents, w_min=1e-17, f=0, every=1):\n",
     "        super().__init__(n_agents, w_min, every)\n",
     "        # f is the social protection factor\n",
     "        self.f = f\n",
