--- a/test.ipynb
+++ b/test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,8 +242,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahora voy a recolectar datos para distintos f y así reproducir resultados de\n",
-    "juli/santi"
+    "### Ahora voy a recolectar datos para distintos f y así reproducir\n",
+    "### resultados de juli/santi"
    ]
   },
   {
@@ -255,10 +255,10 @@
     "filepath = os.path.join(os.getcwd(), \"data/1_basic_results\")\n",
     "\n",
     "f_set = [0, .05, .1, .2, .3, .4, .5]\n",
-    "MCS = int(1e+5)\n",
+    "MCS = int(1e+6)\n",
     "\n",
     "for f in f_set:\n",
-    "    model = YSmodel(1000, w_min=3*1e-17, f=f, every=1)\n",
+    "    model = YSmodel(1000, w_min=1e-17, f=f, every=1)\n",
     "    model.MCS(MCS)\n",
     "    \n",
     "    path_gini = os.path.join(filepath, 'f={:.2f}_gini'.format(f))\n",
@@ -268,19 +268,7 @@
     "    np.save(path_agents, model.n[:, 0])\n",
     "\n",
     "    path_active = os.path.join(filepath, 'f={:.2f}_active'.format(f))\n",
-    "    np.save(path_active, np.array(model.n_active))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# How to load file\n",
-    "path = os.path.join(filepath, 'f={:.2f}_agents.npy'.format(.1))\n",
-    "\n",
-    "a = np.load(path)\n"
+    "    np.save(path_active, np.array(model.n_active))"
    ]
   }
  ],
