--- a/ys_testing/3_dynamic_gtg/3_dynamic_gtg.ipynb
+++ b/ys_testing/3_dynamic_gtg/3_dynamic_gtg.ipynb
@@ -222,7 +222,7 @@
     "\n",
     "MCS = 10000\n",
     "\n",
-    "upd_w = int(MCS/1000) if MCS > 1000 else 5\n",
+    "upd_w = MCS // 1000 if MCS > 1000 else 5\n",
     "upd_g = 500"
    ]
   },
